src/objects/FMV_Settings_MERC__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>Stores the Fair Market Value rates for Speakers by Tier and Year. John A Adams 9/29/2013</description>
    <fields>
        <fullName>Country_Code_MERC__c</fullName>
        <description>Fair Market Value rate Country.
Created by John A Adams 9/29/2013</description>
        <label>Country Code</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Currency_Code_MERC__c</fullName>
        <description>The currency code of the FMV row. Created by Oliver Dunford 28th Oct 2013.</description>
        <label>Currency Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Maximum_Hourly_Rate_MERC__c</fullName>
        <description>Stores the maximum hourly rate for a Country in the FMV list.</description>
        <label>Maximum Hourly Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Minimum_Hourly_Rate_MERC__c</fullName>
        <description>Hourly rate for the Country and Tier.
Created by John A Adams 9/29/2013</description>
        <label>Minimum Hourly Rate</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tier_Value_MERC__c</fullName>
        <description>Speakers tier number within country.
Created by John A Adams 9/29/2013</description>
        <label>Tier Value</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>FMV Settings</label>
</CustomObject>